--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -4,7 +4,7 @@
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
-    <h2 class="form-signin-heading">Please sign in</h2>
+    <h2 class="form-signin-heading">Ingrese usuario y contrasea</h2>
 
     <label for="username" class="sr-only">{{ 'security.login.username'|trans }}</label>
     <input type="text" id="username" class="form-control" placeholder="{{ 'security.login.username'|trans }}" name="_username" value="{{ last_username }}" required="required" />
