--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -1,10 +1,8 @@
-{% trans_default_domain 'FOSUserBundle' %}
-
 <form class="form-signin" action="{{ path("fos_user_security_check") }}" method="post">
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
-    <h2 class="form-signin-heading">Ingrese usuario y contrasea</h2>
+    <h2 class="form-signin-heading">{{ 'security.login.solicitud_credenciales'|trans }}</h2>
 
     <label for="username" class="sr-only">{{ 'security.login.username'|trans }}</label>
     <input type="text" id="username" class="form-control" placeholder="{{ 'security.login.username'|trans }}" name="_username" value="{{ last_username }}" required="required" />
