--- a/app/Resources/views/group/list.html.twig
+++ b/app/Resources/views/group/list.html.twig
@@ -1,8 +1,8 @@
 {% extends 'layout.html.twig' %}
 
 {% block contenido %}
-    <h1>{{ 'group.list.titulo'|trans }}</h1>
-    <table class="table table-striped table-responsive">
+    <h1 id="group_list_titulo">{{ 'group.list.titulo'|trans }}</h1>
+    <table id="group_list_table" class="table table-striped table-responsive">
         <thead>
             <tr>
                 <th>{{ 'group.list.id'|trans }}</th><th>{{ 'group.list.name'|trans }}</th><th>{{ 'general.acciones'|trans }}</th>
@@ -12,15 +12,15 @@
         {% for group in groups %}
             <tr>
                 <td>{{ group.id }}</td><td>{{ group.name }}</td>
-                <td>
+                <td class="table_accion">
                     <span>
-                       <a class="btn btn-primary btn-sm" href="{{ path('group_show', { 'id': group.id }) }}">{{ 'general.ver'|trans }}</a>
+                       <a class="btn btn-primary btn-sm table_accion_show" href="{{ path('group_show', { 'id': group.id }) }}">{{ 'general.ver'|trans }}</a>
                     </span>
                     <span>
-                       <a class="btn btn-primary btn-sm" href="{{ path('group_edit', { 'id': group.id }) }}">{{ 'general.modificar'|trans }}</a>
+                       <a class="btn btn-primary btn-sm table_accion_edit" href="{{ path('group_edit', { 'id': group.id }) }}">{{ 'general.modificar'|trans }}</a>
                     </span>
                     <span>
-                       <a class="btn btn-danger btn-sm" href="{{ path('group_remove', { 'id': group.id }) }}">{{ 'general.eliminar'|trans }}</a>
+                       <a class="btn btn-danger btn-sm table_accion_remove" href="{{ path('group_remove', { 'id': group.id }) }}">{{ 'general.eliminar'|trans }}</a>
                     </span>
                 </td>
             </tr>
@@ -29,7 +29,7 @@
     </table>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a class="btn btn-primary" href="{{ path('group_new') }}" role="button">{{ 'general.agregar'|trans }}</a>
+            <a id="group_list_new" class="btn btn-primary" href="{{ path('group_new') }}" role="button">{{ 'general.agregar'|trans }}</a>
         </div>
     </div>
 {% endblock %}
