--- a/app/Resources/views/group/show.html.twig
+++ b/app/Resources/views/group/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block contenido %}
-    <h1>{{ 'group.show.titulo'|trans }}</h1>
+    <h1 id="group_show_titulo">{{ 'group.show.titulo'|trans }}</h1>
     <table class="table">
         <thead>
             <tr>
@@ -16,9 +16,9 @@
     </table>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a class="btn btn-primary" href="{{ path('group_edit', { 'id': group.id }) }}" role="button">{{ 'general.modificar'|trans }}</a>
-            <a class="btn btn-danger" href="{{ path('group_remove', { 'id': group.id }) }}" role="button">{{ 'general.eliminar'|trans }}</a>
-            <a class="btn btn-primary" href="{{ path('group_list') }}" role="button">{{ 'general.volver'|trans }}</a>
+            <a id="group_show_edit" class="btn btn-primary" href="{{ path('group_edit', { 'id': group.id }) }}" role="button">{{ 'general.modificar'|trans }}</a>
+            <a id="group_show_remove" class="btn btn-danger" href="{{ path('group_remove', { 'id': group.id }) }}" role="button">{{ 'general.eliminar'|trans }}</a>
+            <a id="group_show_list" class="btn btn-primary" href="{{ path('group_list') }}" role="button">{{ 'general.volver'|trans }}</a>
         </div>
     </div>
 {% endblock %}
