--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block contenido %}
-    <h1>{{ 'user.edit.titulo'|trans }}</h1>
+    <h1 id="user_edit_titulo">{{ 'user.edit.titulo'|trans }}</h1>
     {{ form_start(form, {'action': path('user_update', { 'id': user.id }), 'method': 'PUT', 'attr': {'class': 'form-horizontal'}}) }}
         {% if not form.vars.valid %}
             <div class="alert alert-danger" role="alert">
@@ -34,11 +34,11 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">{{ 'general.submit'|trans }}</button>
+                <button id="user_edit_aceptar" type="submit" class="btn btn-primary">{{ 'general.submit'|trans }}</button>
                 {% if is_granted('ROLE_ADMIN') %}
-                    <a class="btn btn-primary" href="{{ path('user_list') }}" role="button">{{ 'general.cancelar'|trans }}</a>
+                    <a id="user_edit_cancelar" class="btn btn-primary" href="{{ path('user_list') }}" role="button">{{ 'general.cancelar'|trans }}</a>
                 {% else %}
-                    <a class="btn btn-primary" href="{{ path('homepage') }}" role="button">{{ 'general.cancelar'|trans }}</a>
+                    <a id="user_edit_cancelar" class="btn btn-primary" href="{{ path('homepage') }}" role="button">{{ 'general.cancelar'|trans }}</a>
                 {% endif %}
             </div>
         </div>
