--- a/app/Resources/views/user/new.html.twig
+++ b/app/Resources/views/user/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block contenido %}
-    <h1>{{ 'user.new.titulo'|trans }}</h1>
+    <h1 id="user_new_titulo">{{ 'user.new.titulo'|trans }}</h1>
     {{ form_start(form, {'action': path('user_create'), 'method': 'POST', 'attr': {'class': 'form-horizontal'}}) }}
         {% if not form.vars.valid %}
             <div class="alert alert-danger" role="alert">
@@ -34,8 +34,8 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">{{ 'general.submit'|trans }}</button>
-                <a class="btn btn-primary" href="{{ path('user_list') }}" role="button">{{ 'general.cancelar'|trans }}</a>
+                <button id="user_new_aceptar" type="submit" class="btn btn-primary">{{ 'general.submit'|trans }}</button>
+                <a id="user_new_cancelar" class="btn btn-primary" href="{{ path('user_list') }}" role="button">{{ 'general.cancelar'|trans }}</a>
             </div>
         </div>
     {{ form_end(form) }}
