--- a/app/Resources/views/user/show.html.twig
+++ b/app/Resources/views/user/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block contenido %}
-    <h1>{{ 'user.show.titulo'|trans }}</h1>
+    <h1 id="user_show_titulo">{{ 'user.show.titulo'|trans }}</h1>
     <table class="table">
         <thead>
             <tr>
@@ -16,12 +16,12 @@
     </table>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a class="btn btn-primary" href="{{ path('user_edit', { 'id': user.id }) }}" role="button">{{ 'general.modificar'|trans }}</a>
+            <a id="user_show_edit" class="btn btn-primary" href="{{ path('user_edit', { 'id': user.id }) }}" role="button">{{ 'general.modificar'|trans }}</a>
             {% if is_granted('ROLE_ADMIN') %}
-                <a class="btn btn-danger" href="{{ path('user_remove', { 'id': user.id }) }}" role="button">{{ 'general.eliminar'|trans }}</a>
-                <a class="btn btn-primary" href="{{ path('user_list') }}" role="button">{{ 'general.volver'|trans }}</a>
+                <a id="user_show_remove" class="btn btn-danger" href="{{ path('user_remove', { 'id': user.id }) }}" role="button">{{ 'general.eliminar'|trans }}</a>
+                <a id="user_show_salir" class="btn btn-primary" href="{{ path('user_list') }}" role="button">{{ 'general.volver'|trans }}</a>
             {% else %}
-                <a class="btn btn-primary" href="{{ path('homepage') }}" role="button">{{ 'general.volver'|trans }}</a>
+                <a id="user_show_salir" class="btn btn-primary" href="{{ path('homepage') }}" role="button">{{ 'general.volver'|trans }}</a>
             {% endif %}
         </div>
     </div>
