Tests funcionales de UserController

--- a/app/Resources/views/group/show.html.twig
+++ b/app/Resources/views/group/show.html.twig
@@ -18,7 +18,7 @@
         <div class="col-sm-offset-2 col-sm-10">
             <a id="group_show_edit" class="btn btn-primary" href="{{ path('group_edit', { 'id': group.id }) }}" role="button">{{ 'general.modificar'|trans }}</a>
             <a id="group_show_remove" class="btn btn-danger" href="{{ path('group_remove', { 'id': group.id }) }}" role="button">{{ 'general.eliminar'|trans }}</a>
-            <a id="group_show_list" class="btn btn-primary" href="{{ path('group_list') }}" role="button">{{ 'general.volver'|trans }}</a>
+            <a id="group_show_salir" class="btn btn-primary" href="{{ path('group_list') }}" role="button">{{ 'general.volver'|trans }}</a>
         </div>
     </div>
 {% endblock %}
