--- a/app/Resources/views/group/edit.html.twig
+++ b/app/Resources/views/group/edit.html.twig
@@ -4,7 +4,7 @@
     <h1 id="group_edit_titulo">{{ 'group.edit.titulo'|trans }}</h1>
     {{ form_start(form, {'action': path('group_update', { 'id': group.id }), 'method': 'PUT', 'attr': {'class': 'form-horizontal'}}) }}
         {% if not form.vars.valid %}
-            <div class="alert alert-danger" role="alert">
+            <div id="form_errors" class="alert alert-danger" role="alert">
                 {{ form_errors(form) }}
             </div>
         {% endif %}
